# docker-database-backup

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  backup.py  compose.yml  database.py  decrypt.py  main.py  pyproject.toml  requirements.in  requirements.txt  settings.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
src/: backup.py  database.py  docker.py  healthcheck.py  metrics.py  schedule.py  settings.py
tests/: all.docker-compose.yml  mariadb.docker-compose.yml  postgres.docker-compose.yml
